akhq/kustomize/overlays/prd/base/generated/akhq/templates/ingress.yaml
---
# Source: akhq/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akhq
  labels:
    app.kubernetes.io/name: akhq
    helm.sh/chart: akhq-0.25.1
    app.kubernetes.io/instance: akhq
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: nginx
  rules:
    - host: "akhq.demo.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: akhq
                port:
                  name: http
